src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Chasing</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Agent_Broker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent/Broker Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only a contacts on the Agent/Broker account available.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Agent_Broker__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Agent/Broker Contact)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent/Broker</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select Agent/Broker Account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agent/Broker</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Lease_Expiry_Date__c</fullName>
        <label>Competitor Lease Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Referral</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Customer Referral)</relationshipLabel>
        <relationshipName>ReferralLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Referral1__c</fullName>
        <label>Employee Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Event Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Event_ID__c</fullName>
        <label>Last Event ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Viewing_ID__c</fullName>
        <label>Last Viewing ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Conversion__c</fullName>
        <description>Hidden field to map record types lead-&gt;Opportunity</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Record Type (Conversion)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Property__c</fullName>
        <inlineHelpText>Initial property of interest.</inlineHelpText>
        <label>Primary Property</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_sq_ft__c</fullName>
        <label>Size sq ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Source__c</fullName>
        <label>Sub Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sub_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unqualified_Comments__c</fullName>
        <label>Unqualified Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Already found space</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Freehold requirement</fullName>
                </value>
                <value>
                    <fullName>No requirement</fullName>
                </value>
                <value>
                    <fullName>No response from chasing</fullName>
                </value>
                <value>
                    <fullName>Unable to accommodate</fullName>
                </value>
                <value>
                    <fullName>Unsuitable use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <label>Use</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Banking/Professional/Travel</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Betting/Gaming</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Exam Space</fullName>
                </value>
                <value>
                    <fullName>Filming</fullName>
                </value>
                <value>
                    <fullName>Full Virtual</fullName>
                </value>
                <value>
                    <fullName>Hair &amp; Beauty</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Fitness</fullName>
                </value>
                <value>
                    <fullName>Hot Food Takeaway</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Interviews</fullName>
                </value>
                <value>
                    <fullName>Mail Only</fullName>
                </value>
                <value>
                    <fullName>Mediation</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Nightclub</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pop Up Food</fullName>
                </value>
                <value>
                    <fullName>Pop Up Retail</fullName>
                </value>
                <value>
                    <fullName>Restaurant/Cafe</fullName>
                </value>
                <value>
                    <fullName>Retail Shop</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Supermarket</fullName>
                </value>
                <value>
                    <fullName>Temporary Office Space</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Viewing_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Viewing Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workstations__c</fullName>
        <label>Workstations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datapro__Count_of_Lead__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>datapro__Total_Privacy_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Privacy Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smagicinteract__TestDate__c</fullName>
        <formula>(LastModifiedDate  -  CreatedDate)* 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TestDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Region__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Agent_Broker__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified,Unqualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Lead</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Region__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Agent_Broker__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <label>Lead Queue</label>
        <queue>Lead_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Meeting_Rooms_Lead_Queue_Lead</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Region__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <label>Meeting Rooms Lead Queue</label>
        <queue>Meeting_Rooms_Lead_Queue</queue>
    </listViews>
    <listViews>
        <fullName>My_Unconverted_Leads</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Region__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Agent_Broker__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>My Unconverted Leads</label>
    </listViews>
    <listViews>
        <fullName>Office_Lead_Queue_Lead</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Region__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Agent_Broker__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <label>Office Lead Queue</label>
        <queue>Office_Lead_Queue</queue>
    </listViews>
    <listViews>
        <fullName>Serviced_Lead_Queue_Lead</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Region__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Agent_Broker__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified,Qualified</value>
        </filters>
        <label>Serviced Lead Queue</label>
        <queue>Serviced_Lead_Queue</queue>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Region__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Agent_Broker__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Conventional</fullName>
        <active>true</active>
        <businessProcess>Standard Lead Process</businessProcess>
        <label>Conventional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meeting_Rooms</fullName>
        <active>true</active>
        <businessProcess>Standard Lead Process</businessProcess>
        <label>Meeting Rooms</label>
    </recordTypes>
    <recordTypes>
        <fullName>Serviced</fullName>
        <active>true</active>
        <businessProcess>Standard Lead Process</businessProcess>
        <label>Serviced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual</fullName>
        <active>true</active>
        <businessProcess>Standard Lead Process</businessProcess>
        <label>Virtual</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Agent_Broker_Contact_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Agent_Broker_Contact__c ), OR(ISPICKVAL( LeadSource, &apos;Agent&apos;), ISPICKVAL( LeadSource, &apos;Broker&apos;)))</errorConditionFormula>
        <errorDisplayField>Agent_Broker_Contact__c</errorDisplayField>
        <errorMessage>Field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agent_Broker_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK( Agent_Broker__c ), OR(ISPICKVAL( LeadSource, &apos;Agent&apos;), ISPICKVAL( LeadSource, &apos;Broker&apos;)))</errorConditionFormula>
        <errorDisplayField>Agent_Broker__c</errorDisplayField>
        <errorMessage>Field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Referral_required</fullName>
        <active>true</active>
        <description>If Lead Source = &apos;Referral&apos; AND Sub Source = &apos;Customer&apos;, Customer Referral cannot be blank.</description>
        <errorConditionFormula>AND(
            ISPICKVAL(LeadSource, &apos;Referral&apos;),
            ISPICKVAL(Sub_Source__c, &apos;Customer&apos;),
            ISBLANK(Customer_Referral__c)
            )</errorConditionFormula>
        <errorDisplayField>Customer_Referral__c</errorDisplayField>
        <errorMessage>Field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employee_Referral_Empty</fullName>
        <active>true</active>
        <description>&quot;Employee Referral&quot; should be required if &quot;Referral&quot; Lead Source is selected with &quot;Employee &quot; subsource</description>
        <errorConditionFormula>AND( ISBLANK( Employee_Referral1__c ) , ISPICKVAL( LeadSource , &apos;Referral&apos;),  ISPICKVAL( Sub_Source__c , &apos;Employee&apos;) )</errorConditionFormula>
        <errorDisplayField>Employee_Referral1__c</errorDisplayField>
        <errorMessage>Field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Convert_Validation_Company_Check</fullName>
        <active>true</active>
        <errorConditionFormula>(IsConverted = TRUE) &amp;&amp; (Company_Check__c = FALSE) &amp;&amp; RecordType.DeveloperName = &apos;Virtual&apos;</errorConditionFormula>
        <errorDisplayField>Company_Check__c</errorDisplayField>
        <errorMessage>Please indicate you have performed an initial company compliance check as per the &apos;Know Your Customer&apos; guidelines.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Convert_Validation_First_Name</fullName>
        <active>true</active>
        <errorConditionFormula>IsConverted = TRUE &amp;&amp; ISBLANK( FirstName )</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>The &apos;First Name&apos; field should be specified before conversion process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Convert_Validation_Primary_Property</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  IsConverted = TRUE,
  ISPICKVAL( Primary_Property__c , &apos;&apos;),
  NOT( ISPICKVAL( LeadSource , &apos;Agent&apos;))
)</errorConditionFormula>
        <errorDisplayField>Primary_Property__c</errorDisplayField>
        <errorMessage>The &apos;Primary Property&apos; field should be specified before conversion process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Convert_Validation_Product</fullName>
        <active>true</active>
        <errorConditionFormula>(IsConverted = TRUE) &amp;&amp; (ISPICKVAL(Product__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>The &apos;Product&apos; field should be specified before conversion process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Convert_Validation_Region</fullName>
        <active>true</active>
        <errorConditionFormula>IsConverted = TRUE &amp;&amp; ISPICKVAL(Region__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>The &apos;Region&apos; field should be specified before conversion process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Convert_Validation_Size_sq_ft</fullName>
        <active>true</active>
        <errorConditionFormula>IsConverted = TRUE &amp;&amp; RecordType.DeveloperName = &apos;Conventional&apos; &amp;&amp; (ISBLANK( Size_sq_ft__c ) || ISBLANK( Size_sq_ft__c ))</errorConditionFormula>
        <errorDisplayField>Size_sq_ft__c</errorDisplayField>
        <errorMessage>The &apos;Size sq ft&apos; field should specified before conversion process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Convert_Validation_Workstations</fullName>
        <active>true</active>
        <errorConditionFormula>IsConverted = TRUE &amp;&amp; RecordType.DeveloperName = &apos;Serviced&apos; &amp;&amp; (ISBLANK(  Workstations__c ) || ISBLANK( Workstations__c ))</errorConditionFormula>
        <errorDisplayField>Workstations__c</errorDisplayField>
        <errorMessage>The &apos;Workstations&apos; field should be specified before conversion process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Number_Should_Start_With_07</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(BEGINS(MobilePhone, &apos;07&apos;))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile number should start with 07</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Size_sq_ft_0_or_more</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Size_sq_ft__c &lt; 0, NOT(ISBLANK(Size_sq_ft__c )))</errorConditionFormula>
        <errorDisplayField>Size_sq_ft__c</errorDisplayField>
        <errorMessage>Must be 0 or more.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unqualified_Reason_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
            ISPICKVAL( Status , &apos;Unqualified&apos;),
            ISPICKVAL( Unqualified_Reason__c , &apos;&apos;)
            )</errorConditionFormula>
        <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
        <errorMessage>Field is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Workstations_0_or_more</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Workstations__c &lt; 0, NOT(ISBLANK(Workstations__c )))</errorConditionFormula>
        <errorDisplayField>Workstations__c</errorDisplayField>
        <errorMessage>Must be 0 or more.</errorMessage>
    </validationRules>
</CustomObject>